Bug #16445 schema version error 241 after mysqld restart
Submitted: 12 Jan 2006 11:33 Modified: 30 May 2006 10:34
Reporter: Tomas Ulin Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Martin Skold Target Version:

[12 Jan 2006 11:33] Tomas Ulin
Description:
create table in ndbcluster
do some alter tables using several mysql servers
drop the tables
restart the mysql server
create a table
using this table may give error 241

How to repeat:
remove workaround in mysql-test-run for this bug in ndb_basic.test
[12 Jan 2006 11:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/958
[14 Feb 2006 15:09] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2598
[21 Apr 2006 6:50] Martin Skold
Pushed to 5.1.21
[22 Apr 2006 15:23] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented bugfix in 5.1.10 changelog. Closed.
[3 May 2006 22:16] Michael Widenius
There are still random failures on Linux Intel32 and Linux Intel64 when compiled with
--debug
To be able to push, I added back a create + drop of t1 at the start of ndb_basic.test
[4 May 2006 3:28] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/5923
[15 May 2006 6:58] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/6370
[13 Jun 2007 13:36] Stewart Smith
re-enabled the test in 5.1-ndb