After merge fixes Remove compiler warnings Fix some broken tests Workaround for syncronization bug in NDB (Bug #16445)